--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,7 +2,7 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: '0 0 * * *' # 每天00:00 UTC触发
+    - cron: '0 * * * *' # 每小时 UTC触发
   workflow_dispatch: # 手动触发
 
 jobs:
