--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,19 +1,25 @@
-name: Sync Fork
+name: Upstream Sync
+
+permissions:
+  contents: write
 
 on:
   schedule:
-    - cron: '0 * * * *' # 每小时 UTC触发
-  workflow_dispatch: # 手动触发
+    - cron: "*/30 * * * *" # every day
+  workflow_dispatch:
 
 jobs:
-  sync:
+  sync_latest_from_upstream:
+    name: Sync latest commits from upstream repo
     runs-on: ubuntu-latest
+    if: ${{ github.event.repository.fork }}
+
     steps:
-      - name: Checkout fork repository
-        uses: actions/checkout@v2
+      - name: Checkout target repo
+        uses: actions/checkout@v3
         with:
-          ref: main
-          
+          fetch-depth: 0 # 获取所有分支的完整历史记录
+
       - name: Set up Git
         run: |
           git config --global user.name 'github-actions[bot]'
@@ -22,13 +28,25 @@ jobs:
       - name: Add upstream repository
         run: git remote add upstream https://github.com/antvis/G6VP.git
 
-      - name: Fetch upstream
+      - name: Fetch all branches from upstream
         run: git fetch upstream
 
-      - name: Merge upstream changes
-        run: git merge upstream/main
+      - name: Sync all branches
+        run: |
+          for branch in $(git branch -r | grep 'upstream/' | grep -v '\->'); do
+            branch=${branch#upstream/}
+            git checkout $branch || git checkout -b $branch
+            git merge upstream/$branch --allow-unrelated-histories
+          done
 
       - name: Push changes to fork
-        run: git push origin main
+        run: git push --all origin
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Sync check
+        if: failure()
+        run: |
+          echo "[Error] 由于上游仓库的 workflow 文件变更，导致 GitHub 自动暂停了本次自动更新，你需要手动 Sync Fork 一次，详细教程请查看：https://github.com/Yidadaa/ChatGPT-Next-Web/blob/main/README_CN.md#%E6%89%93%E5%BC%80%E8%87%AA%E5%8A%A8%E6%9B%B4%E6%96%B0"
+          echo "[Error] Due to a change in the workflow file of the upstream repository, GitHub has automatically suspended the scheduled automatic update. You need to manually sync your fork. Please refer to the detailed tutorial for instructions: https://github.com/Yidadaa/ChatGPT-Next-Web#enable-automatic-updates"
+          exit 1
